<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/menu_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/menu_search"
        android:title="@string/menu_search" />
    <item
        android:id="@+id/menu_comingsoon"
        android:icon="@drawable/menu_coming_soon"
        android:title="@string/menu_coming_soon" />
    <item
        android:id="@+id/menu_downloads"
        android:icon="@drawable/menu_downloads"
        android:title="@string/menu_downloads" />
    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/menu_more"
        android:title="@string/menu_more" />
</menu>